[gd_scene load_steps=9 format=3 uid="uid://d2pm2nuxpam11"]

[ext_resource type="Script" path="res://menu.gd" id="1_c6sym"]
[ext_resource type="Texture2D" uid="uid://dskc4y6gay87g" path="res://8749001f-7c02-40f1-881b-c036f9f770ed.jpg" id="1_ia4r4"]
[ext_resource type="SystemFont" uid="uid://dge2vktlvbqib" path="res://new_system_font.tres" id="2_kypb5"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_njbp8"]
texture = ExtResource("1_ia4r4")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_a14t8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4vsov"]
bg_color = Color(0.255659, 0.255659, 0.255659, 0.564706)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0, 0, 0, 0.388235)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_clvqo"]
bg_color = Color(0.366595, 0.366595, 0.366595, 0.564706)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0, 0, 0, 0.388235)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q8mfi"]
bg_color = Color(0, 0, 0, 0.564706)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0, 0, 0, 0.388235)
shadow_size = 5

[node name="MENU" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 576.0
offset_top = 324.0
offset_right = -576.0
offset_bottom = -324.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c6sym")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = -576.0
offset_top = -324.0
offset_right = 1342.0
offset_bottom = 803.0
theme_override_styles/panel = SubResource("StyleBoxTexture_njbp8")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -199.5
offset_top = -116.5
offset_right = 199.5
offset_bottom = 116.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_a14t8")
theme_override_styles/hover = SubResource("StyleBoxFlat_4vsov")
theme_override_styles/pressed = SubResource("StyleBoxFlat_clvqo")
theme_override_styles/normal = SubResource("StyleBoxFlat_q8mfi")
text = "Start Exploring
"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_a14t8")
theme_override_styles/hover = SubResource("StyleBoxFlat_4vsov")
theme_override_styles/pressed = SubResource("StyleBoxFlat_clvqo")
theme_override_styles/normal = SubResource("StyleBoxFlat_q8mfi")
text = "Controls
"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_a14t8")
theme_override_styles/hover = SubResource("StyleBoxFlat_4vsov")
theme_override_styles/pressed = SubResource("StyleBoxFlat_clvqo")
theme_override_styles/normal = SubResource("StyleBoxFlat_q8mfi")
text = "Quit
"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -173.0
offset_top = -48.0
offset_right = 158.0
offset_bottom = 26.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 10
theme_override_constants/shadow_offset_y = 4
theme_override_fonts/font = ExtResource("2_kypb5")
theme_override_font_sizes/font_size = 60
text = "Rise Of Sedes"

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_settings_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_exit_3_pressed"]
